syntax="proto3";
option java_package = "com.github.entropyfeng.mydb.common.protobuf";
option java_outer_classname = "TurtleProtoBuf";
enum TurtleModel{ //支持模式

    ADMIN=0;

    VALUE=1;

    HASH=2;

    SET=3;

    ZSET=4;

    LIST=5;
}
enum TurtleValueType{
    Bytes=0;
    Integer=1;
    Long=2;
    Double=3;
    NumberInteger=4;
    NumberDecimal=5;
}
message TurtleValue{ //数据库基本对象
    TurtleValueType turtleValueType=1;
    bytes values=2;
}
enum TurtleParaType{//所支持的参数类型
    STRING=0;

    INTEGER=1;

    LONG=2;

    DOUBLE=3;

    BOOL=4;

    NUMBER_INTEGER=5;

    NUMBER_DECIMAL=6;

    TURTLE_VALUE=7;

    BYTES=9;

   COLLECTION_TURTLE_VALUE=10;
   COLLECTION_DOUBLE=11;
   COLLECTION_INTEGER=12;
   COLLECTION_LONG=13;
   COLLECTION_NUMBER_INTEGER=14;
   COLLECTION_NUMBER_DECIMAL=15;
   COLLECTION_BYTES=16;
   COLLECTION_STRING=17;

}

enum ExceptionType{
    UnsupportedOperationException=0;
    NullPointerException=1;
    IllegalAccessException=2;
    InvocationTargetException=3;
    NoSuchMethodException=4;
    NoSuchElementException=5;
    RuntimeException=6;
    ElementOutOfBoundException=7;
    TurtleValueElementOutBoundsException=8;
    TurtleTimeOutException=9;
    IllegalArgumentException=10;
    //Error--------------
    OutOfMemoryError=100;
    StackOverflowError=101;
    TurtleFatalError=102;
    TurtleDesignError=103;

}

message StringTurtleValueEntry{
    string key=1;
    TurtleValue value=2;
}
message  TurtleTurtleValueEntry{
    TurtleValue key=1;
    TurtleValue value=2;
}
message ResHead{
    int64 responseSequence=1;
    bool success=2;
    int32 resSize=3;
    ExceptionType innerExceptionType=4;
    string innerException=5;

}
message ResBody{

    int64 requestSequence=1;
    oneof Value{
        string stringValue=7;
        int32 intValue=8;
        int64 longValue=9;
        double doubleValue=10;
        bool boolValue=11;
        bytes bytesValue=12;
        TurtleValue turtleValue=13;
        StringTurtleValueEntry stringTurtleValueEntry=14;
        TurtleTurtleValueEntry turtleTurtleValueEntry=15;
    }
}
message Response{

    int64 requestId=1;
    bool beginAble=2;
    bool endAble=3;
    oneof Value{
        ResHead header=4;
        ResBody body=5;
    }

}
message ResponseData{

    int64 responseId=1;

    int64 responseSequence=2;

    bool success=3;

    bool collectionAble=5;//返回值是否为集合

    oneof Value{
        string stringValue=7;
        int32 intValue=8;
        int64 longValue=9;
        double doubleValue=10;
        bool boolValue=11;
        bytes bytesValue=12;
        TurtleValue turtleValue=13;
        StringTurtleValueEntry stringTurtleValueEntry=14;
        TurtleTurtleValueEntry turtleTurtleValueEntry=15;
    }

    ExceptionType exceptionType=20;

    string exception=21;

    int64 collectionSize=22;

    bool nullable=23;//是否为空,仅在非集合有效
    bool voidable=24;//是否为空,仅在集合有效
    bool endAble=25;
}

message RequestHeaderPayload{
    int64 requestSequence=1;
    TurtleModel model=2;
    string operationName=3;
    repeated TurtleParaType keys=4;
    bool modify=5;
}
message RequestBodyPayload{
    int64 requestSequence=1;
    int32 location=2;
    oneof Value{
        string stringValue=3;
        int32 intValue=4;
        int64 longValue=5;
        double doubleValue=6;
        bool boolValue=7;
        bytes bytesValue=8;
        TurtleValue turtleValue=9;
    }
}
message ClientCommand{//客户端命令

    int64 requestId=1;
    bool beginAble=2;
    bool endAble=3;
    oneof Value{
          RequestHeaderPayload header=4;
          RequestBodyPayload body=5;
    }
}